--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <td class="c"><a href="index.html" class="b"><label><b>  HOME  </b></label></a></td>
                 <td class="c"><a href="index.html"class="b" ><label><b>  COMPANIES  </b></label></a></td>
                 <td class="c"><a href="index.html" class="b" ><label><b>  ABOUT  </b></label></a></td>
-                <td class="c"><a href="index.html" class="b" ><label><b>  CONTACY-US  </b></label></a></td>
+                <td class="c"><a href="index.html" class="b" ><label><b>  CONTACT-US  </b></label></a></td>
             </tr>
         </table>
         </center>
