--- a/index.html
+++ b/index.html
@@ -98,19 +98,11 @@
 <body>
     <div class="a">  
         <center>
-        <table border="0">
-            <tr>
-                <td><img src="https://i.ibb.co/1GdpzVr/attachment-122803173-removebg-preview-1-removebg-preview.png" height="130px" width="250px"></td>
-                <td class="c"><a href="index.html" class="b"><label><b>  HOME  </b></label></a></td>
-                <td class="c"><a href="index.html"class="b" ><label><b>  COMPANIES  </b></label></a></td>
-                <td class="c"><a href="index.html" class="b" ><label><b>  ABOUT  </b></label></a></td>
-                <td class="c"><a href="index.html" class="b" ><label><b>  CONTACT-US  </b></label></a></td>
-            </tr>
-        </table>
+            <td><img src="https://i.ibb.co/1GdpzVr/attachment-122803173-removebg-preview-1-removebg-preview.png" height="150px" width="300px"></td>
         </center>
     </div>
     <header>
-        <h1>StreamlineHire</h1>
+        <h1>Streamline-Hire</h1>
         <p>Revolutionizing the Hiring Process for Improved Efficiency and Talent Acquisition</p>
     </header>
     <div class="c">
@@ -125,7 +117,7 @@
                 <li>Cost Savings</li>
                 <li>Access to Top Talent</li>
             </ul>
-            <a href="#" class="e">Get Started</a>
+            <a href="back1.html" class="e">Get Started</a>
         </section>
         <section class="d">
             <div class="f">
