--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <li>Cost Savings</li>
                 <li>Access to Top Talent</li>
             </ul>
-            <a href="back1.html" class="e">Get Started</a>
+            <a href="company.html" class="e">Get Started</a>
         </section>
         <section class="d">
             <div class="f">
