--- a/details.html
+++ b/details.html
@@ -170,7 +170,7 @@
         <td/><div class="bcd">Resume :<td/><input type="file" ></input>
         </tr>
         <tr>
-        <td colspan=2><div class="xx"><a href="index.html"><input class="xyz" type="button" value="Submit" name="en" id="en"/></a></div></td>
+        <td colspan=2><div class="xx"><a href="apptiTest.html"><input class="xyz" type="button" value="Submit" name="en" id="en"/></a></div></td>
         </tr>
         </table>
         </form>
