--- a/apptiTest.html
+++ b/apptiTest.html
@@ -220,7 +220,7 @@
                             <div class="o">D. 3 : 2</div>
                         </div>
         </div>
-            <button>Submit</button>
+            <a href="TechInterviewExam.html"><button>Submit</button></a>
         </div>
         <br>
         <marquee direction="left" scrooling=50 bgcolor="#333" width=1000 height=35 behavier="slide">
